--- a/index.html
+++ b/index.html
@@ -3,24 +3,51 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="icon" class="favicon" type="image/png" size="32x32"  href="/styling/Images/Untitled.png">
- <link rel="stylesheet" type="text/css" href="/styling/home-design.css">
+ <link rel="icon" class="favicon" type="image/png" size="32x32"  href="./styling/Images/Untitled.png">
+ <link rel="stylesheet" type="text/css" href="./styling/reset.css">
+ <link rel="stylesheet" type="text/css" href="./styling/home-design.css">
  <script src="https://kit.fontawesome.com/5b26c2cd27.js" crossorigin="anonymous"></script> 
  <title>Hello, I'm Bolarinwa</title>   
 </head>
 
 <body>
-<section class="main">
-<div class="header">
-<h1><strong>B</strong>olarinwa</h1>
- 
+  
+
+    <main>
+
+        <header>
+            <h1><strong>B</strong>olarinwa</h1>
+             
+            </header>
+
+            <section class="main-content">
+
+<div class="descriptions">
+
+<h2>I'M</h2>
+<h1>BOLARINWA</h1>
+<p id="fancy-text">I'M <span class="auto-type"></span></p>
+
+<span id="talk">
+
+    <span class="links">
+    <a href="https://devbola.netlify.app">Explore My Portfolio</a>
+    <a href="mailto:myjoyhasarrived2004@gmail.com">Connect With me &#8594;</a>
+</span>
+    <p>You Can Explore More About My Portfolio And<br> Just Continue To Find Bugs And Hairballs.</p>
+</span>
+</div>
+    <div class="socials">
+    <a href="https://www.instagram.com/tltechbender/"><i  class="fa-brands fa-instagram"></i></a>
+<a href="https://github.com/TLTechbender"><i class="fa-brands fa-github"></i></a>    
+<a href="https://twitter.com/TLTechbender"><i class="fa-brands fa-twitter"></i></a>
 </div>
 
-<div class="bottom">
-<div class="descriptions">
-<h2 id="IM">I'M</h2>
-<h1>BOLARINWA</h1>
-<h2 id="fancy-text">I'M <span class="auto-type"></span></h2>
+</section>
+
+</main>
+
+
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script> <!--I do not know how to link this externally-->
     var typed=new Typed(".auto-type", {
@@ -30,20 +57,5 @@
     loop:true
 });
 </script>
-<span id="talk">
-    <a href="/coming-soon.html"><button id="left">Explore My Portfolio</button></a>
-    <a href="/coming-soon.html"><button>Connect With me &#8594;</button></a>
-    <p>You Can Explore More About My Portfolio And<br> Just Continue To Find Bugs And Hairballs.</p>
-</span>
-</div>
-    <div class="socials">
-    <a href="https://www.instagram.com/tltechbender/"><i  class="fa-brands fa-instagram"></i></a>
-<a href="https://github.com/TLTechbender"><i class="fa-brands fa-github"></i></a>    
-<a href="https://twitter.com/TLTechbender"><i class="fa-brands fa-twitter"></i></a>
-</div>
-</div>
-
-</section>
-
 </body>
 </html>
